--- a/Spike.Tests/Spike.Tests.csproj
+++ b/Spike.Tests/Spike.Tests.csproj
@@ -85,16 +85,18 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="MockedTests\OrchestrationTests.cs" />
-    <Compile Include="RollbackTests\DatabaseAdapterTests.cs" />
+    <Compile Include="IntegrationTests\OrchestrationTests.cs" />
+    <Compile Include="MockedOchestrationTests\OrchestrationTests.cs" />
+    <Compile Include="RollbackAdapterTests\DatabaseAdapterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RollbackTests\TransactionBase.cs" />
+    <Compile Include="TransactionBase.cs" />
     <Compile Include="Test Data\ResetWithTestData.cs" />
     <Compile Include="Test Data\ObjectMother\BookData.cs" />
     <Compile Include="Test Data\ObjectMother\CustomerData.cs" />
     <Compile Include="Test Data\ObjectMother\LibraryCardData.cs" />
     <Compile Include="Test Data\ObjectMother\ObjectMother.cs" />
     <Compile Include="Utilities.cs" />
+    <Compile Include="Waldos\CustomerWaldo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -123,9 +125,7 @@
       <Name>Spike.StubData</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="IntegrationTests\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
